--- a/app/views/analysts/passwords/edit.html.erb
+++ b/app/views/analysts/passwords/edit.html.erb
@@ -1,25 +1,45 @@
-<h2>Change your password</h2>
+<div class="panel panel-primary">
+  <div class="panel-heading"><h3>Resetar Senha</h3></div>
+</div>
+<div class="container">
+  <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="centered">
+          <h3>Reset de Senha</h3>
+        </div>
+      </div>
+      <div class="panel-body">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= devise_error_messages! %>
+          <%= f.hidden_field :reset_password_token %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+          <div class="field">
+            <%= f.label :password, "Senha" %><br />
+            <% if @minimum_password_length %>
+            <% end %>
+            <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+          <div class="field">
+            <%= f.label :password_confirmation, "Confirmação de Senha" %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          </div>
+
+          <div class="form-group">
+            <div class="col-md-offset-2 col-md-9">
+              <%= f.submit "Atulizar Senha", class:"btn btn-info" do %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "analysts/shared/links" %>
+<div class="centered">
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "Criar conta", new_registration_path(resource_name), class: "btn btn-success" %><br />
+  <% end -%>
+</div>
